// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServerURLForm Auth required 1`] = `
<form
  className="server-url-form "
  onSubmit={[Function]}
>
  <label
    htmlFor="sourcegraph-url"
  >
    Sourcegraph URL
  </label>
  <div
    className="input-group"
  >
    <div
      className="input-group-prepend"
    >
      <span
        className="input-group-text"
      >
        <span>
          <span
            className="server-url-form__status-indicator bg-danger"
          />
           
          <span
            className="e2e-connection-status"
          >
            Error
          </span>
        </span>
      </span>
    </div>
    <input
      autoCapitalize="off"
      autoCorrect="off"
      className="form-control e2e-sourcegraph-url"
      id="sourcegraph-url"
      onChange={[Function]}
      spellCheck={false}
      type="text"
      value="https://sourcegraph.sgdev.org"
    />
  </div>
  <div
    className="mt-1"
  >
    Authentication to Sourcegraph failed.
     
    <a
      href="https://sourcegraph.sgdev.org"
      rel="noopener noreferrer"
      target="_blank"
    >
      Sign in to your instance
    </a>
     
    to continue.
  </div>
</form>
`;

exports[`ServerURLForm Connected 1`] = `
<form
  className="server-url-form "
  onSubmit={[Function]}
>
  <label
    htmlFor="sourcegraph-url"
  >
    Sourcegraph URL
  </label>
  <div
    className="input-group"
  >
    <div
      className="input-group-prepend"
    >
      <span
        className="input-group-text"
      >
        <span>
          <span
            className="server-url-form__status-indicator bg-success"
          />
           
          <span
            className="e2e-connection-status"
          >
            Connected
          </span>
        </span>
      </span>
    </div>
    <input
      autoCapitalize="off"
      autoCorrect="off"
      className="form-control e2e-sourcegraph-url"
      id="sourcegraph-url"
      onChange={[Function]}
      spellCheck={false}
      type="text"
      value="https://sourcegraph.com"
    />
  </div>
</form>
`;

exports[`ServerURLForm Connecting 1`] = `
<form
  className="server-url-form "
  onSubmit={[Function]}
>
  <label
    htmlFor="sourcegraph-url"
  >
    Sourcegraph URL
  </label>
  <div
    className="input-group"
  >
    <div
      className="input-group-prepend"
    >
      <span
        className="input-group-text"
      >
        <span>
          <span
            className="server-url-form__status-indicator bg-warning"
          />
           
          <span
            className="e2e-connection-status"
          >
            Connecting
          </span>
        </span>
      </span>
    </div>
    <input
      autoCapitalize="off"
      autoCorrect="off"
      className="form-control e2e-sourcegraph-url"
      id="sourcegraph-url"
      onChange={[Function]}
      spellCheck={false}
      type="text"
      value="https://sourcegraph.com"
    />
  </div>
</form>
`;

exports[`ServerURLForm Editing 1`] = `
<form
  className="server-url-form "
  onSubmit={[Function]}
>
  <label
    htmlFor="sourcegraph-url"
  >
    Sourcegraph URL
  </label>
  <div
    className="input-group"
  >
    <div
      className="input-group-prepend"
    >
      <span
        className="input-group-text"
      >
        <span>
          <span
            className="server-url-form__status-indicator bg-secondary"
          />
           
          <span
            className="e2e-connection-status"
          >
            ⁠
          </span>
        </span>
      </span>
    </div>
    <input
      autoCapitalize="off"
      autoCorrect="off"
      className="form-control e2e-sourcegraph-url"
      id="sourcegraph-url"
      onChange={[Function]}
      spellCheck={false}
      type="text"
      value="https://sourcegraph"
    />
  </div>
</form>
`;

exports[`ServerURLForm Invalid URL 1`] = `
<form
  className="server-url-form "
  onSubmit={[Function]}
>
  <label
    htmlFor="sourcegraph-url"
  >
    Sourcegraph URL
  </label>
  <div
    className="input-group"
  >
    <div
      className="input-group-prepend"
    >
      <span
        className="input-group-text"
      >
        <span>
          <span
            className="server-url-form__status-indicator bg-danger"
          />
           
          <span
            className="e2e-connection-status"
          >
            Error
          </span>
        </span>
      </span>
    </div>
    <input
      autoCapitalize="off"
      autoCorrect="off"
      className="form-control e2e-sourcegraph-url"
      id="sourcegraph-url"
      onChange={[Function]}
      spellCheck={false}
      type="text"
      value="sourcegraph.com"
    />
  </div>
  <div
    className="mt-1"
  >
    Invalid Sourcegraph URL.
  </div>
</form>
`;

exports[`ServerURLForm Other error - has permissions 1`] = `
<form
  className="server-url-form "
  onSubmit={[Function]}
>
  <label
    htmlFor="sourcegraph-url"
  >
    Sourcegraph URL
  </label>
  <div
    className="input-group"
  >
    <div
      className="input-group-prepend"
    >
      <span
        className="input-group-text"
      >
        <span>
          <span
            className="server-url-form__status-indicator bg-danger"
          />
           
          <span
            className="e2e-connection-status"
          >
            Error
          </span>
        </span>
      </span>
    </div>
    <input
      autoCapitalize="off"
      autoCorrect="off"
      className="form-control e2e-sourcegraph-url"
      id="sourcegraph-url"
      onChange={[Function]}
      spellCheck={false}
      type="text"
      value="https://sourcegraph.sgdev.org"
    />
  </div>
  <div
    className="mt-1"
  >
    <p>
      Unable to connect to
       
      <a
        href="https://sourcegraph.sgdev.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        https://sourcegraph.sgdev.org
      </a>
      . Ensure the URL is correct and you are
       
      <a
        href="https://sourcegraph.sgdev.org/sign_in"
        rel="noopener noreferrer"
        target="_blank"
      >
        logged in
      </a>
      .
    </p>
    <p>
      <b>
        Site admins:
      </b>
       ensure that
       
      <a
        href="https://docs.sourcegraph.com/admin/config/site_config"
        rel="noopener noreferrer"
        target="_blank"
      >
        all users can create access tokens
      </a>
      .
    </p>
  </div>
</form>
`;

exports[`ServerURLForm Other error - no permissions 1`] = `
<form
  className="server-url-form "
  onSubmit={[Function]}
>
  <label
    htmlFor="sourcegraph-url"
  >
    Sourcegraph URL
  </label>
  <div
    className="input-group"
  >
    <div
      className="input-group-prepend"
    >
      <span
        className="input-group-text"
      >
        <span>
          <span
            className="server-url-form__status-indicator bg-danger"
          />
           
          <span
            className="e2e-connection-status"
          >
            Error
          </span>
        </span>
      </span>
    </div>
    <input
      autoCapitalize="off"
      autoCorrect="off"
      className="form-control e2e-sourcegraph-url"
      id="sourcegraph-url"
      onChange={[Function]}
      spellCheck={false}
      type="text"
      value="https://sourcegraph.sgdev.org"
    />
  </div>
  <div
    className="mt-1"
  >
    <p>
      Unable to connect to
       
      <a
        href="https://sourcegraph.sgdev.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        https://sourcegraph.sgdev.org
      </a>
      . Ensure the URL is correct and you are
       
      <a
        href="https://sourcegraph.sgdev.org/sign_in"
        rel="noopener noreferrer"
        target="_blank"
      >
        logged in
      </a>
      .
    </p>
    <p>
      You may need to
       
      <a
        href="#"
        onClick={[MockFunction]}
      >
        grant the Sourcegraph browser extension additional permissions
      </a>
       
      for this URL.
    </p>
    <p>
      <b>
        Site admins:
      </b>
       ensure that
       
      <a
        href="https://docs.sourcegraph.com/admin/config/site_config"
        rel="noopener noreferrer"
        target="_blank"
      >
        all users can create access tokens
      </a>
      .
    </p>
  </div>
</form>
`;

exports[`ServerURLForm Other error 1`] = `
<form
  className="server-url-form "
  onSubmit={[Function]}
>
  <label
    htmlFor="sourcegraph-url"
  >
    Sourcegraph URL
  </label>
  <div
    className="input-group"
  >
    <div
      className="input-group-prepend"
    >
      <span
        className="input-group-text"
      >
        <span>
          <span
            className="server-url-form__status-indicator bg-danger"
          />
           
          <span
            className="e2e-connection-status"
          >
            Error
          </span>
        </span>
      </span>
    </div>
    <input
      autoCapitalize="off"
      autoCorrect="off"
      className="form-control e2e-sourcegraph-url"
      id="sourcegraph-url"
      onChange={[Function]}
      spellCheck={false}
      type="text"
      value="https://sourcegraph.sgdev.org"
    />
  </div>
  <div
    className="mt-1"
  >
    <p>
      Unable to connect to
       
      <a
        href="https://sourcegraph.sgdev.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        https://sourcegraph.sgdev.org
      </a>
      . Ensure the URL is correct and you are
       
      <a
        href="https://sourcegraph.sgdev.org/sign_in"
        rel="noopener noreferrer"
        target="_blank"
      >
        logged in
      </a>
      .
    </p>
    <p>
      <b>
        Site admins:
      </b>
       ensure that
       
      <a
        href="https://docs.sourcegraph.com/admin/config/site_config"
        rel="noopener noreferrer"
        target="_blank"
      >
        all users can create access tokens
      </a>
      .
    </p>
  </div>
</form>
`;
